[project]
name = "mock-alpaca-ws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sharvsave1023", email = "sharv.save@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "polars>=1.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]