[project]
name = "mock-alpaca-ws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sharvsave1023", email = "sharv.save@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
